# www

./: .gitignore  Cargo.toml  README.md  config.yaml
.github/workflows/: deploy.yml
resources/: blog_image.rs  blog_post.rs  blog_sync.rs  tables.rs
schemas/: schema.graphql
source/: index.html  package-lock.json  package.json  vite-plugin-seo.ts  vite.config.ts
source/public/: install.ps1  install.sh
source/public/data/: bestresults.json
source/public/images/logos/: streamlock.avif
source/src/: App.tsx  articles.ts  index.css  main.tsx  routeTree.gen.ts  router.tsx  utils.ts  yeti.css
source/src/components/: BetaModal.tsx  Code.tsx  Footer.tsx  Icon.tsx  Nav.tsx
source/src/data/: benchmarks.json  bestresults.json  posts.ts
source/src/hooks/: useSEO.ts
source/src/pages/: AI.tsx  Applications.tsx  Benchmarks.tsx  Blog.tsx  BlogPost.tsx  Demos.tsx  Fabric.tsx  Home.tsx  Hosting.tsx  Legal.tsx  NotFound.tsx  Platform.tsx  UseCases.tsx
source/src/pages/blog/: why-we-built-yeti.tsx
source/src/pages/legal/: AcceptableUse.tsx  CookiePolicy.tsx  PrivacyPolicy.tsx  SoftwareLicense.tsx  SupportPolicy.tsx  TermsOfService.tsx
source/src/routes/: __root.tsx  blog.tsx  company.tsx  index.tsx  platform.tsx
source/src/routes/blog/: $slug.tsx
source/src/routes/developers/: benchmarks.tsx  demos.tsx  getting-started.tsx
source/src/routes/legal/: acceptable-use.tsx  cookie-policy.tsx  index.tsx  privacy-policy.tsx  software-license.tsx  support-policy.tsx  terms-of-service.tsx
source/src/routes/solutions/: ai.tsx  cloud.tsx  use-cases.tsx
src/: lib.rs
