# Cargo manifest for www — Phase 48 static-crate shape.
#
# Dual-mode during the dylib → static migration window. yeti-compiler
# reads only [dependencies] when building the dylib (retiring in
# Phase 48 slice 5); cargo uses the full file when building the static
# library this crate compiles to.

[package]
name = "www"
version = "0.1.0"
edition = "2024"
description = "yetirocks.com marketing site + demos"

[lib]
name = "www"
path = "src/lib.rs"

[workspace]

[dependencies]
yeti-sdk = { path = "../../../Developer/yeti/crates/yeti-sdk", features = ["workspace"] }
serde_json = "1"
